--- a/front-end/index.html
+++ b/front-end/index.html
@@ -8,12 +8,15 @@
 
     
     <!-- css + icon -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="index.css" />
     <script src="https://kit.fontawesome.com/3a0162c1dc.js" crossorigin="anonymous"></script>
 
     <title>Orinoco - Le spécialiste de l'appareil photo vintage</title>
 
 </head> 
+
+<!--Body-->
+<body>
 
 <!--Header + nav menu-->
 <header>
@@ -54,5 +57,7 @@
     </ul>
     <p class="copyright text-center">Orinoco © 2021</p>
 </footer>
+
+</body>
 
 </html>
