--- a/front-end/index.html
+++ b/front-end/index.html
@@ -9,6 +9,7 @@
     
     <!-- css + icon -->
     <link rel="stylesheet" href="styles/index.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
     <script src="https://kit.fontawesome.com/3a0162c1dc.js" crossorigin="anonymous"></script>
 
     <title>Orinoco - Le spécialiste de l'appareil photo vintage</title>
@@ -21,30 +22,33 @@
 <!--Header + nav menu-->
 <header>
     <div class="header_container">
-        <div class="logo flex-center">
-            <p>Orinoco</p>
-            <i class="fas fa-camera-retro"></i>
+        <div class="logo center-flex">
+            <h1>Orinoco</h1>
         </div>
         <div class="navbar container">
-            <a class="nav-link a-link" href="basket.html">Panier</a>
-            <a class="nav-link a-link" href="#"><i class="fas fa-shopping-cart flex-center"></i> </a>  
+            <a class="nav-link a-link" href="front-end/index.html">Accueil</a>  
+            <a class="nav-link a-link" href="cart.html">Panier</a>
         </div>
     </div>
 </header>
 
 <!-- Description -->
-<main>
+<section>
     <div class="main_container">
-        <h1 class="">Bienvenue sur Orinoco</h1>
+        <h2 class="">Bienvenue sur Orinoco</h2>
         <p class="">Retrouvez notre sélection d'appareils de collection ainsi que leurs objectifs</p>
     </div>
-</main>
+</section>
 
 <!-- Card -->
-<section class="products-container">
-    <div class="card_list" id="liste">
+<main>
+    <div class="products-container">
+        <h3 class="title">Nos produits</h3>
+        <div class="products">
+            
+        </div>
     </div>
-</section>
+</main>
 
 <!-- Footer -->
 <footer class="footer_container">
@@ -56,6 +60,9 @@
     </ul>
     <p class="copyright text-center">Orinoco © 2021</p>
 </footer>
+
+<!-- script -->
+<script src="scripts/index.js"></script>
 
 </body>
 
