--- a/front-end/cart.html
+++ b/front-end/cart.html
@@ -26,7 +26,7 @@
             <h1>Orinoco</h1>
         </div>
         <div class="navbar">
-            <a class="nav-link a-link" href="front-end/index.html">Accueil</a>  
+            <a class="nav-link a-link" href="index.html">Accueil</a>  
             <a class="nav-link a-link" href="cart.html">Panier</a>
         </div>
     </div>
