--- a/product.html
+++ b/product.html
@@ -56,7 +56,7 @@
                     <input id="CameraNum" type="CameraNum" name="CameraNum" value="1" min="1">
                 </div>
                 <div class="product-card__infos__color">
-                    <label for="color-select">Couleur :</label>
+                    <label for="color-select"> Objectif :</label>
                     <select name="color" id="color-select">
                     </select>
                 </div>
